mudei algumas coisas

--- a/Cardapio/index.html
+++ b/Cardapio/index.html
@@ -39,7 +39,7 @@
         background-color: #6d4423;
         border-radius: 5px;
       }
-      .hero {
+      .titulo {
         text-align: center;
         padding: 25px;
         background: url("https://source.unsplash.com/1600x900/?bakery")
@@ -48,7 +48,7 @@
         font-size: 24px;
         font-weight: bold;
       }
-      .menu-list {
+      .menu-lista {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -101,12 +101,12 @@
       </ul>
   </nav>
 
-    <header class="hero">
+    <header class="titulo">
       <h1>Nosso Cardápio</h1>
       <p>Delícias fresquinhas todos os dias para você!</p>
     </header>
 
-    <section class="menu-list">
+    <section class="menu-lista">
       <div class="menu-item">
         <div class="menu-item-content">
           <img
