--- a/Sobrenos/index.html
+++ b/Sobrenos/index.html
@@ -39,7 +39,7 @@
             background-color: #6d4423;
             border-radius: 5px;
         }
-        .hero {
+        .titulo {
             text-align: center;
             padding: 50px 20px;
             background: url('https://source.unsplash.com/1600x900/?bakery') no-repeat center/cover;
@@ -47,13 +47,13 @@
             font-size: 24px;
             font-weight: bold;
         }
-        .about-content {
+        .conteudo {
             text-align: center;
             padding: 20px;
             max-width: 800px;
             margin: auto;
         }
-        .about-content img {
+        .conteudo img {
             width: 200px;
             height: 200px;
             border-radius: 10px;
@@ -72,22 +72,22 @@
         </ul>
     </nav>
     
-    <header class="hero">
+    <header class="titulo">
         <h1>Sobre a Padaria Delícia</h1>
         <p>Tradição e qualidade em cada pedaço!</p>
     </header>
-    <section class="about-content">
+    <section class="conteudo">
         <iframe src="https://www.youtube.com/embed/QP_H8A06BGo" frameborder="0" width="620" height="315"></iframe>
     </section>
-    <section class="about-content">
+    <section class="conteudo">
         <h2>Quem Somos</h2>
         <p>Fundada há mais de 20 anos, a Padaria Delícia se orgulha de oferecer pães fresquinhos e produtos de altíssima qualidade para a nossa comunidade. Com receitas passadas de geração em geração, buscamos sempre inovar e atender aos gostos dos nossos clientes com muito carinho.</p>
     </section>
-    <section class="about-content">
+    <section class="conteudo">
         <h2>Nossa Missão</h2>
         <p>Proporcionar uma experiência única aos nossos clientes, oferecendo produtos frescos e deliciosos, feitos com ingredientes selecionados e com muito amor.</p>
     </section>
-    <section class="about-content">
+    <section class="conteudo">
         <h2>Visite-nos</h2>
         <p>Estamos localizados no coração da cidade. Venha nos visitar e se apaixonar pelas nossas delícias!</p>
     </section>
