--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         background-color: #6d4423;
         border-radius: 5px;
       }
-      .hero {
+      .titulo {
         text-align: center;
         padding: 50px 20px;
         background: url("https://source.unsplash.com/1600x900/?bakery")
@@ -48,13 +48,13 @@
         font-size: 24px;
         font-weight: bold;
       }
-      .gallery {
+      .imagens {
         display: flex;
         justify-content: center;
         gap: 20px;
         padding: 40px;
       }
-      .gallery img {
+      .imagens img {
         width: 300px;
         height: 200px;
         border-radius: 10px;
@@ -84,7 +84,7 @@
       </ul>
   </nav>
 
-    <header class="hero">
+    <header class="titulo">
       <h1>Bem-vindo à Padaria Delícia</h1>
       <p>Pães fresquinhos todos os dias para você!</p>
     </header>
@@ -101,7 +101,7 @@
       </p>
     </section>
 
-    <section class="gallery">
+    <section class="imagens">
       <img
         src="https://img.freepik.com/fotos-premium/paes-diversos-tipos-de-paes-brasileiros-produtos-de-panificacao_491130-2828.jpg"
         alt="Pães"
@@ -116,14 +116,7 @@
       />
     </section>
 
-    <section class="content">
-      <h2>Conheça a Tradição</h2>
-      <p>
-        Há décadas, nossa padaria traz o sabor e a qualidade que encantam nossos
-        clientes. Cada produto é feito com carinho e ingredientes selecionados.
-      </p>
-    </section>
-    <section>
+
       <ul class="content">
         <h2>Nossos Diferenciais</h2>
 
@@ -138,5 +131,18 @@
         </ul>
       </ul>
     </section>
+    <section class="content">
+      <div style="display: flex; justify-content: center; gap: 15px; margin-top: 20px;">
+        <a href="https://www.instagram.com" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="40" height="40" />
+        </a>
+        <a href="https://www.facebook.com" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="40" height="40" />
+        </a>
+        <a href="https://wa.me/" target="_blank">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="40" height="45" />
+        </a>
+      </div>
+    <section>
   </body>
 </html>
