Adição de letreiro, listas e tabelas

--- a/Cardapio/index.html
+++ b/Cardapio/index.html
@@ -105,7 +105,33 @@
       <h1>Nosso Cardápio</h1>
       <p>Delícias fresquinhas todos os dias para você!</p>
     </header>
-
+    <h2 style="text-align: center; margin-top: 30px;"> Promoções da Semana</h2>
+    <table border="1px" style="margin: auto;">
+      <tr>
+        <th>Produto</th>
+        <th>Descrição</th>
+        <th>Preço</th>
+        <th>Validade</th>
+      </tr>
+      <tr>
+        <td>10x Pães Artesanais</td>
+        <td>Feitos com fermentação natural e crocância ideal</td>
+        <td>R$ 4,49 cada</td>
+        <td>Até 12/04</td>
+      </tr>
+      <tr>
+        <td>Combo Café + Croissant</td>
+        <td>Um café expresso + 1 croissant recheado</td>
+        <td>R$ 8,50</td>
+        <td>Até 13/04</td>
+      </tr>
+      <tr>
+        <td>Bolo de Chocolate</td>
+        <td>Fatia extra grande com cobertura cremosa</td>
+        <td>R$ 9,00</td>
+        <td>Até 10/04</td>
+      </tr>
+    </table>
     <section class="menu-lista">
       <div class="menu-item">
         <div class="menu-item-content">
