--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <h1>Bem-vindo à Padaria Delícia</h1>
       <p>Pães fresquinhos todos os dias para você!</p>
     </header>
-
+    <marquee direction="left" scrollamount="12" >A Padaria Delícia está contratando! Vagas para atendente, auxiliar de produção e entregador. Entregue seu currículo pessoalmente ou fale pelo WhatsApp: (XX) XXXXX-XXXX</marquee>
     <section class="about" id="sobre">
       <h2 style="font-size: 35px">
         Padaria Delícia, a melhor padaria de salto
@@ -120,15 +120,15 @@
       <ul class="content">
         <h2>Nossos Diferenciais</h2>
 
-        <ul>
+        <li>
           Ingredientes naturais e frescos
-        </ul>
-        <ul>
+        </li>
+        <li>
           Receitas tradicionais e inovadoras
-        </ul>
-        <ul>
+        </li>
+        <li>
           Ambiente aconchegante e atendimento especial
-        </ul>
+        </li>
       </ul>
     </section>
     <section class="content">
